--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "atom-linter": "^8.0.0",
-    "atom-package-deps": "^4.0.1"
+    "atom-package-deps": "^4.0.1",
+    "linter": ">=1.11.0 <2.0.0"
   },
   "providedServices": {
     "linter": {
