--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "atom-linter": "^8.0.0",
-    "atom-package-deps": "^4.0.1",
-    "linter": ">=1.11.0 <2.0.0"
+    "atom-package-deps": "^4.0.1"
   },
+  "package-deps": [
+  "linter"
+],
   "providedServices": {
     "linter": {
       "versions": {
