--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "atom-linter": "^9.0.1",
-    "atom-package-deps": "^4.0.1"
+    "atom-package-deps": "^4.0.1",
+    "consistent-env": "^1.3.0"
   },
   "package-deps": [
     "linter:2.0.0"
