:new: Add CI config

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
+  "scripts": {
+    "test": "(flow check) && (eslint . ) && (apm test)"
+  },
   "dependencies": {
     "atom-linter": "^9.0.1",
     "atom-package-deps": "^4.0.1",
