--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "atom-linter": "^9.0.1",
     "atom-package-deps": "^4.0.1",
-    "consistent-env": "^1.3.0"
+    "consistent-env": "^1.3.0",
+    "uuid4": "^1.0.0"
   },
   "package-deps": [
     "linter:2.0.0"
