build: mark package as private for NPM

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "linter-julia",
   "main": "./lib/index.js",
   "version": "0.7.3",
+  "private": true,
   "description": "Lint.jl support for Atom using the linter package",
   "keywords": [
     "Julia",
