--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "eslint": "5.14.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-plugin-import": "2.16.0",
-    "flow-bin": "0.93.0"
+    "flow-bin": "0.93.0",
+    "jasmine-fix": "1.3.1"
   },
   "configSchema": {
     "executablePath": {
