--- a/package.json
+++ b/package.json
@@ -24,11 +24,24 @@
     "atom-linter": "10.0.0",
     "atom-package-deps": "5.1.0",
     "consistent-env": "1.3.1",
-    "uuid4": "1.1.4"
+    "uuid4": "1.1.4",
+    "atom-languageclient": "^0.9.8"
   },
   "package-deps": [
     "linter:2.0.0"
   ],
+  "consumedServices": {
+    "linter-indie": {
+      "versions": {
+        "2.0.0": "consumeLinterV2"
+      }
+    },
+    "datatip": {
+      "versions": {
+        "0.1.0": "consumeDatatip"
+      }
+    }
+  },
   "providedServices": {
     "linter": {
       "versions": {
