--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "atom-package-deps": "5.1.0",
     "consistent-env": "1.3.1",
     "uuid4": "1.1.4",
-    "atom-languageclient": "^0.9.8"
+    "atom-languageclient": "0.9.8"
   },
   "package-deps": [
     "linter:2.0.0"
