--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "dependencies": {
     "atom-linter": "10.0.0",
     "atom-package-deps": "6.0.0",
-    "consistent-env": "1.3.1",
-    "uuid4": "1.1.4"
+    "consistent-env": "1.3.1"
   },
   "package-deps": [
     "linter:2.0.0"
