--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint": "(flow check) && (eslint . )",
     "test": "(npm run lint) && (apm test)"
   },
+  "bundleDependencies": false,
   "dependencies": {
     "atom-linter": "10.0.0",
     "atom-package-deps": "6.0.0",
@@ -35,14 +36,7 @@
       }
     }
   },
-  "devDependencies": {
-    "babel-eslint": "10.1.0",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb-base": "14.2.0",
-    "eslint-plugin-import": "2.21.2",
-    "flow-bin": "0.124.0",
-    "jasmine-fix": "1.3.1"
-  },
+  "devDependencies": {},
   "configSchema": {
     "executablePath": {
       "type": "string",
