--- a/package.json
+++ b/package.json
@@ -36,7 +36,14 @@
       }
     }
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-eslint": "10.1.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-base": "14.2.0",
+    "eslint-plugin-import": "2.21.2",
+    "flow-bin": "0.124.0",
+    "jasmine-fix": "1.3.1"
+  },
   "configSchema": {
     "executablePath": {
       "type": "string",
